fixed gapping between h5 and links

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ a:visited {
 }
 
   .text {
+    margin: 0px;
     background-color: white;
     color: black;
     font-size: 14px;
